; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oledlg/extr_oledlg_main.c_register_clipboard_formats.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oledlg/extr_oledlg_main.c_register_clipboard_formats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@register_clipboard_formats.CF_EMBEDSOURCEW = internal constant [13 x i8] c"Embed Source\00", align 1
@register_clipboard_formats.CF_EMBEDDEDOBJECTW = internal constant [16 x i8] c"Embedded Object\00", align 16
@register_clipboard_formats.CF_LINKSOURCEW = internal constant [12 x i8] c"Link Source\00", align 1
@register_clipboard_formats.CF_OBJECTDESCRIPTORW = internal constant [18 x i8] c"Object Descriptor\00", align 16
@register_clipboard_formats.CF_LINKSRCDESCRIPTORW = internal constant [23 x i8] c"Link Source Descriptor\00", align 16
@register_clipboard_formats.CF_OWNERLINKW = internal constant [10 x i8] c"OwnerLink\00", align 1
@register_clipboard_formats.CF_FILENAMEW = internal constant [9 x i8] c"FileName\00", align 1
@register_clipboard_formats.CF_FILENAMEWW = internal constant [10 x i8] c"FileNameW\00", align 1
@cf_object_descriptor = common dso_local global i8* null, align 8
@cf_link_src_descriptor = common dso_local global i8* null, align 8
@cf_embed_source = common dso_local global i8* null, align 8
@cf_embedded_object = common dso_local global i8* null, align 8
@cf_link_source = common dso_local global i8* null, align 8
@cf_ownerlink = common dso_local global i8* null, align 8
@cf_filename = common dso_local global i8* null, align 8
@cf_filenamew = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @register_clipboard_formats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_clipboard_formats() #0 {
  %1 = call i8* @RegisterClipboardFormatW(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @register_clipboard_formats.CF_OBJECTDESCRIPTORW, i64 0, i64 0))
  store i8* %1, i8** @cf_object_descriptor, align 8
  %2 = call i8* @RegisterClipboardFormatW(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @register_clipboard_formats.CF_LINKSRCDESCRIPTORW, i64 0, i64 0))
  store i8* %2, i8** @cf_link_src_descriptor, align 8
  %3 = call i8* @RegisterClipboardFormatW(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @register_clipboard_formats.CF_EMBEDSOURCEW, i64 0, i64 0))
  store i8* %3, i8** @cf_embed_source, align 8
  %4 = call i8* @RegisterClipboardFormatW(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @register_clipboard_formats.CF_EMBEDDEDOBJECTW, i64 0, i64 0))
  store i8* %4, i8** @cf_embedded_object, align 8
  %5 = call i8* @RegisterClipboardFormatW(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @register_clipboard_formats.CF_LINKSOURCEW, i64 0, i64 0))
  store i8* %5, i8** @cf_link_source, align 8
  %6 = call i8* @RegisterClipboardFormatW(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @register_clipboard_formats.CF_OWNERLINKW, i64 0, i64 0))
  store i8* %6, i8** @cf_ownerlink, align 8
  %7 = call i8* @RegisterClipboardFormatW(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @register_clipboard_formats.CF_FILENAMEW, i64 0, i64 0))
  store i8* %7, i8** @cf_filename, align 8
  %8 = call i8* @RegisterClipboardFormatW(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @register_clipboard_formats.CF_FILENAMEWW, i64 0, i64 0))
  store i8* %8, i8** @cf_filenamew, align 8
  ret void
}

declare dso_local i8* @RegisterClipboardFormatW(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
